--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activity.MainActivity"
-            android:theme="@style/MyTheme">
+        <activity android:name=".activity.MainActivity">
         </activity>
         <activity android:name=".activity.HomeActivity">
             <intent-filter>
